apps/arr/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 99
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr:4.0.5.1710
          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
            limits:
              memory: "1000Mi"
              cpu: "300m"
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-data
              mountPath: /config
          livenessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: sonarr-data
          persistentVolumeClaim:
            claimName: sonarr-data
