apps/arr/sonarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${INTERNAL_INGRESS_CLASS}
  tls:
    - hosts:
        - "sonarr.${INTERNAL_DOMAIN}"
      secretName: "sonarr-tls"
  rules:
    - host: "sonarr.${INTERNAL_DOMAIN}"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
